--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,38 @@ h3 {
     top: 50%;
     left: 50%;
     width:40em;
-    height:20em;
-    margin-top: -10em;
+    height:26em;
+    margin-top: -13em;
     margin-left: -20em;
     border: 1px solid black; 
 }
 
 .result_box_img {
-    width: 80%;
-    margin-top: 10px; 
+    width: 70%;
+    text-align: center;
+}
+
+#win_or_lose {
+    text-align: center;  
+    border: 0; 
+    padding: 0; 
+    margin: 0;
+}
+
+#player_column {
+    float: left;
+}
+#computer_column {
+    float: right; 
+}
+
+button {
+    margin-left: 5px; 
+    height: 70px; 
+    width: 90%;
+    border-radius: 10px; 
+    border: 2px solid black;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    font-size: 20px; 
+    background-color: #BCE2FF; 
 }
